Sec11_Chap102-XX-NOK: 1st manual trial to fix the tests