@@ -6,9 +6,9 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
 import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.sql.Date;
@@ -31,7 +31,7 @@ class BalanceControllerTest {
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
+    @MockitoBean
     private AccountTransactionsRepository accountTransactionsRepository;
 
     private List<AccountTransactions> testTransactions;
@@ -136,7 +136,7 @@ class BalanceControllerTest {
     @WithMockUser(roles = "USER")
     @DisplayName("Should handle single transaction correctly")
     void testGetBalanceDetails_SingleTransaction() throws Exception {
-        List<AccountTransactions> singleTransaction = Collections.singletonList(testTransactions.get(0));
+        List<AccountTransactions> singleTransaction = Collections.singletonList(testTransactions.getFirst());
         when(accountTransactionsRepository.findByCustomerIdOrderByTransactionDtDesc(1L))
                 .thenReturn(singleTransaction);
 
